<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingBottom="5dp"
    android:paddingTop="5dp"
    android:paddingRight="10dp"
    android:orientation="vertical"
    android:background="#FFFFFF">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_costumerid"
        android:text="@string/idCostumer"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_costumerName"
        android:text="@string/Name"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_costumerLocation"
        android:text="@string/Location"/>



</LinearLayout>